--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
- 
-<<<<<<< HEAD
-    <title>Odin Recipes</title>
-=======
-    <title>Document</title>
->>>>>>> 43a93595acc69ddb519ddf7b62f4f5a36d00d98a
+<meta charset="UTF-8">
+<title>Odin Recipes</title>
 </head>
+
 <body>
-    
+ <h1>Odin Recipes</h1>   
+ <a href="recipes/lasagna.html">Lasagna recipe</a>
 </body>
+
 </html>
