--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
    
     <title>Lasagna recipe</title>
-
 </head>
+
 <body>
 <h1>Lasagna recipe</h1>
+
 <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="World's Best Lasagna">
+
 <h3>Description</h3>
+
 <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades.</p>
 <p>Make our most popular lasagna today to find out what all the fuss is about !</p>
+
 <h3>Ingredients</h3>
+
 <ul> 
     <li><strong>Meat :</strong> Sweet Italian sausage <i>and</i> lean ground beef. </li>
     <li><strong>Onion and garlic :</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
@@ -23,4 +28,17 @@
     <li><strong>Cheeses :</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
     <li><strong>Egg :</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
 </ul>
+
+<h3>Step-by-step</h3>
+
+<ol> 
+    <li>Make the meat sauce.</li>
+    <li>Cook the noodles.</li>
+    <li>Make the ricotta mixture.</li>
+    <li>Layer the lasagna according to the recipe instructions.</li>
+    <li>Cover with foil and bake.</li>
+    <li>Let the lasagna rest before serving.</li>
+
+
+</ol>
 </html>
