--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,7 +7,14 @@
 
 <body>
 <h1>Odin Recipes</h1>   
-<a href="recipes/lasagna.html">Lasagna recipe</a>
+<ul>
+
+    <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
+    <li><a href="recipes/pancakes.html">Pancakes recipe</a></li>
+    <li><a href="recipes/macandcheese.html">Mac and cheese  recipe</a></li>
+
+</ul>
+
 </body>
 
 </html>
