--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -10,7 +10,7 @@
 
 <h1>Pancakes recipe</h1>
 
-<img src="https://www.allrecipes.com/thmb/ZOWhCWHrr26IX3_emFX6RYqaT0Q=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Good-Old-Fashioned-Pancakes-by-angela-2000-5bdefa16ad58418c93658f1d04924708.jpg" alt="Good old fashioned pacakes">
+<img src="https://www.allrecipes.com/thmb/ZOWhCWHrr26IX3_emFX6RYqaT0Q=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Good-Old-Fashioned-Pancakes-by-angela-2000-5bdefa16ad58418c93658f1d04924708.jpg" alt="Good old fashioned pacakes" width="500" height="400">
 
 <p>Perfect pancakes are easier to make than you think. This pancake recipe produces thick, fluffy, and all-around delicious pancakes with just a few ingredients that are probably already in your kitchen (and it's so much better than the boxed stuff).</p>
 
