--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -7,6 +7,40 @@
 
 </head>
 <body>
-    
+
+<h1>Mac and cheese</h1>    
+
+<img src="https://www.allrecipes.com/thmb/qoQvQIM_zHCRO4xjdapVotA7zNg=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-11679-Homemade-Mac-and-Cheese-ddmfs-4x3-6a3167c5e01e44a4a081942be2baab12.jpg" alt="Homemade Mac and Cheese">
+
+<p>This homemade mac and cheese is topped with buttered bread crumbs for pure comfort food. It's easy to make the cheese sauce from scratch, starting with a roux and adding milk, Cheddar, and Parmesan to make a rich, decadent sauce that coats every nook and cranny of the noodles.</p>
+
+<p>Skip the boxed stuff and make homemade mac and cheese tonight. This from-scratch macaroni and cheese recipe will become a staple in your dinner rotation.</p>
+
+<h3>Ingredients</h3>
+
+<ul>
+
+    <li><strong>Macaroni :</strong> This homemade mac and cheese starts with a box of uncooked macaroni noodles.</li>
+    <li><strong>Butter & flour :</strong> You'll need butter and flour to make a roux for the cheese sauce. You'll also need two tablespoons of butter for the topping.</li>
+    <li><strong>Milk :</strong> Use whole milk for the richest flavor and texture.</li>
+    <li><strong>Cheese :</strong> This baked mac and cheese recipe calls for Cheddar and Parmesan cheeses</li>
+    <li><strong>Seasonings :</strong> Salt and pepper goes into the sauce, while paprika is sprinkled over the topping.</li>
+    <li><strong>Bread crumbs :</strong> Use store-bought dried bread crumbs or make your own at home.</li>
+
+</ul>
+
+<h3>Step-by-step</h3>
+
+<ol>
+
+    <li>Boil the noodles, drain, and transfer to a prepared baking dish.</li>
+    <li>Make the cheese sauce, pour the sauce over the noodles, and stir.</li>
+    <li>Make the topping, spread it over macaroni and cheese, and sprinkle with paprika.</li>
+    <li>Bake the mac and cheese until the topping is golden brown.</li>
+
+</ol>
+
 </body>
+
+
 </html>
